FUTBOL BRASIL:  - Finalizada implementación de Selector de Equipos paginado - Fixes varios

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu.html
@@ -1,5 +1,7 @@
 <div id="wrapperM" class="page left">
-    <div class="scroller" style="width: 100%;">
-        <div class="container" ng-transclude></div>
+    <div class="scroller">
+        <div class="container-fluid">
+            <div ng-transclude></div>
+        </div>
     </div>
 </div>
