--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -3,7 +3,7 @@
         <div id="scroller" ng-style="getTotalWidth()">
             <ul>
                 <li ng-style="getWidth()" ng-repeat="competition in item.competitions" >
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row row-header row-header-competition">
                             <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
                                 <h6 ng-bind="item.competitions[$index-1].name"></h6>
@@ -33,7 +33,7 @@
                             <div id="{{vWrapper.getName($index)}}" class="wrapper"
                                  style="margin-top:100px !important;">
                                 <div class="scroller" style="position: relative;">
-                                    <div class="container">
+                                    <div class="row">
                                         <div class="col-xs-12" >
                                             <table class="table">
                                                 <thead>
