--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -564,6 +564,21 @@ body.content-mtm .row-back {
 .content-menu span:last-child { margin-left: 10px; color:#4D4D4D;}
 .content-menu {border-bottom: solid 1pt #E0E0E0;}
 
+.content-sub-menu {
+    background:#ffffff;
+    height: 35px;
+    line-height:35px;
+    font-size: 1.2em;
+    border-bottom: solid 1pt #E0E0E0;
+}
+.content-sub-menu span:last-child { margin-left: 10px; color:#4D4D4D;}
+
+@media (max-height: 540px) {
+    .content-sub-menu {
+        display: none !important;
+    }
+}
+
 /*menu*/
 
 .tabs {
