FUTBOL BRASIL:  - Adaptados algunos Strings a i18n - Cambio pequeño en sistema de Updates

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -35,13 +35,12 @@
     </div>
 </div>
 
-<!--TODO i18n-alizar-->
 <ul class="pager search-list-pager">
     <li class="previous" ng-class="{'disabled' : !hasPrev }" ng-click="showPrevPage()">
-        <span>Previous</span>
+        <span translate>PREVIOUS</span>
     </li>
     <li class="next" ng-class="{'disabled' : !hasNext }" ng-click="showNextPage()">
-        <span>Next</span>
+        <span translate>NEXT</span>
     </li>
 </ul>
 
