--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -513,7 +513,12 @@ body.content-mtm .row-back {
 .status.PT { background-color:#3B9444; color: #ffffff; }
 .status.ST { background-color:#FFBF00; color: #000000; }
 
-.bet.active {background-color:#f2f2f2  !important;}
+td.bet div {
+  position:relative;
+  width:100%;
+  height:100%;
+}
+
 
 /* From ext/bootstrap.css */
 .col-xs-15,
@@ -968,4 +973,19 @@ body.content-mtm .row-back {
   color:#ff5722 !important;
   font-weight: bold;
   font-size: 1.2em;
+}
+
+
+
+.content-prediction .bet.active {background-color:#f2f2f2  !important;}
+.content-prediction .bet.active div {background-color:#f2f2f2  !important;}
+.content-prediction .bet span.mdi-navigation-check {display:none;}
+.content-prediction .bet.active div span.mdi-navigation-check {
+  position:absolute;
+  font-weight:bold;
+  font-size:2.2em;
+  display:block;
+  top:0;
+  right:0;
+  color:#3B9444;
 }
