--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -5,10 +5,10 @@
                 <div class="row row-header">
                     <div class="col-xs-12">
                         <div class="row row-header-competition">
-                            <div class="col-xs-4 tabs text-left">
+                            <div class="col-xs-4 tabs text-left" ng-click="prevPage($index)">
                                 <span ng-bind="leagues[$index-1].name"></span>
                             </div>
-                            <div class="col-xs-4" ng-click="prevPage($index)">
+                            <div class="col-xs-4">
                                 <span ng-bind="league.name" class="caption"></span>
                             </div>
                             <div class="col-xs-4 tabs text-right" ng-click="nextPage($index)">
