FUTBOL BRASIL:  - Agregada funcionalidad de Logout - Agregado Redirect a Remind/Get Credentials desde dialogo de sección bloqueada

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/share-modal.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/share-modal.html
@@ -9,14 +9,14 @@
                     <div class="col-xs-12">
                         <button class="btn btn-block btn-primary"
                                 style="background-color: #3b5998;"
-                                ng-click="fbShare()">Facebook</button>
+                                ng-click="$root.fbShare()">Facebook</button>
                         <div class="full-separator"></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
                         <button class="btn btn-block btn-info"
-                                ng-click="twitterShare()">Twitter</button>
+                                ng-click="$root.twitterShare()">Twitter</button>
                         <div class="full-separator"></div>
                     </div>
                 </div>
