--- a/ExtremeSports/server/ExtremeSports/app/views/main.scala.html
+++ b/ExtremeSports/server/ExtremeSports/app/views/main.scala.html
@@ -25,6 +25,7 @@
 
         <script src="@routes.Assets.at("javascripts/ripples.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/material.min.js")" type="text/javascript"></script>
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
     </head>
     <body>
 
@@ -86,6 +87,15 @@
                                         <li class="dropdown-header">@Messages("main.countries")</li>
                                         <li><a href="@controllers.routes.CountriesView.list()">@Messages("main.list")</a></li>
                                         <li><a href="@controllers.routes.CountriesView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
+
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.events")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li class="dropdown-header">@Messages("main.events")</li>
+                                        <li><a href="@controllers.routes.EventsView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.EventsView.blank">@Messages("main.create")</a></li>
                                     </ul>
                                 </li>
 
