EXTREME_SPORTS: ajustes de nombre para los correos de play authenticate

--- a/ExtremeSports/server/ExtremeSports/app/views/account/signup/email/verify_email_es.scala.html
+++ b/ExtremeSports/server/ExtremeSports/app/views/account/signup/email/verify_email_es.scala.html
@@ -3,7 +3,7 @@ Hola @name,
 <br />
 <br />
 <p>
-	Se acaba de apuntar a Memepedia.<br />
+	Se acaba de apuntar a Extreme Sports.<br />
 	<br />
 	Siga el siguiente enlace para <a href="@verificationUrl">activar su cuenta</a>.
 </p>
