--- a/ExtremeSports/server/ExtremeSports/app/views/account/signup/email/verify_email_en.scala.html
+++ b/ExtremeSports/server/ExtremeSports/app/views/account/signup/email/verify_email_en.scala.html
@@ -3,7 +3,7 @@ Howdy @name,
 <br />
 <br />
 <p>
-	You recently signed up for Memepedia.<br />
+	You recently signed up for Extreme Sports.<br />
 	<br />
 	Follow this link to <a href="@verificationUrl">activate your account</a> now.
 </p>
