--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-item.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-item.html
@@ -1,6 +1,11 @@
+
 <div ng-click="navigate()" class="row content-menu">
-    <div class="col-xs-12">
+  <div class="col-xs-12">
+    <div class="col-xs-2 text-right" style="padding-right:5px !important;">
         <span ng-class=" 'icon {{icon}}' "></span>
-        <span ng-transclude></span>
     </div>
+    <div class="col-xs-8">
+      <span ng-transclude></span>
+    </div>
+  </div>
 </div>
