--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -66,7 +66,8 @@ header, footer {
 
 header {
     top: 0;
-    background: #313f75 url(../img/bg.png) repeat-x fixed;
+    /*background: #313f75 url(../img/bg.png) repeat-x fixed;*/
+    background: #0076b4;
 }
 
 footer {
@@ -565,18 +566,31 @@ td.bet div {
 
 /*menu*/
 
-.content-menu {background:#ffffff; height: 50px; line-height:50px; font-size: 1.4em;}
-.content-menu span:last-child { margin-left: 10px; color:#4D4D4D;}
-.content-menu {border-bottom: solid 1pt #E0E0E0;}
+.content-menu,
+.content-sub-menu {background:#ffffff; height: 50px; line-height:50px; font-size: 1.4em; color:#134985;}
+.content-menu div.col-xs-8,
+.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #ffca00; padding-left:0 !important;}
+.content-menu span:last-child {text-transform:uppercase;}
 
+.content-sub-menu div.col-xs-8 {
+  border-bottom: solid 1pt #134985;
+  padding-left:0 !important;
+}
+
+
+/*
 .content-sub-menu {
     background:#ffffff;
-    height: 35px;
-    line-height:35px;
-    font-size: 1.2em;
-    border-bottom: solid 1pt #E0E0E0;
+    height: 50px;
+    line-height:50px;
+    font-size: 1.4em;
 }
-.content-sub-menu span:last-child { margin-left: 10px; color:#4D4D4D;}
+.content-sub-menu div.col-xs-10 {
+  border-bottom: solid 1pt #134985;
+  padding-left:0 !important;
+}
+
+.content-sub-menu span:last-child { margin-left: 0; color:#4D4D4D;}*/
 
 @media (max-height: 540px) {
     .content-sub-menu {
@@ -619,7 +633,7 @@ td.bet div {
 }
 
 /*Drawer*/
-
+.mdi-navigation-more-vert,
 .drawer-icon {
     vertical-align: middle;
     font-size: 2.5em;
@@ -630,6 +644,7 @@ td.bet div {
     font-size: 18px;
     color: #FFF;
     font-weight: bold;
+    text-transform:uppercase;
 }
 
 .drawer-app-logo {
