--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -18,7 +18,6 @@ body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; }
 .footer-section:hover {color: #FFFFFF !important; text-decoration: none  !important; }
 .footer-section:active { color: #FFFFFF !important; text-decoration: none  !important; }
 
-
 #wrapper, #wrapperM{
     position: absolute;
     z-index: 1;
@@ -29,11 +28,12 @@ body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; }
 }
 
 #wrapperM {
+    position: absolute;
     z-index:9;
     top: 50px;
+    bottom: 0;
     width: 80%;
     left: -80%;
-    height: 100%;
     -webkit-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.66);
     -moz-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.66);
     box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.66);
@@ -74,7 +74,8 @@ footer {
     line-height: 25px;
     color:#FFFFFF;
     bottom: 0;
-    background: #9D9D9D;
+    background: #134985;
+    z-index: 7;
 }
 
 footer .option {
@@ -128,12 +129,8 @@ body.content-mtm #wrapper2 .scroller .container .row div {
     /*background-color: #ffffff;*/
 }
 
-/*img {*/
-    /*border-radius : 0 !important;*/
-/*}*/
-
 .option.active {
-    background-color:#263776;
+    background-color:#ffca00;
 }
 
 header .section {
@@ -1008,3 +1005,16 @@ h6.team-name {
   right:2px;
   color:#3B9444;
 }
+
+#screen-block {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 8;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  text-align:center;
+  vertical-align:middle;
+ }
