--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
@@ -19,7 +19,8 @@
 
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <span class="input-group-addon">+58</span>
+                                        <!--span class="input-group-addon">+58</span-->
+                                        <span class="input-group-addon">&nbsp;&nbsp;</span>
                                         <label for="msisdnInput" class="col-xs-2 control-label sr-only"
                                                translate>LOGIN.MSISDN_LABEL</label>
                                         <input type="tel" class="form-control empty" ng-model="msisdn"
